<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/dialog_add_topic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic_name"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dialog_add_topic_picture_source_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/choose_source_for_the_topic_picture"/>

        <ImageButton
            android:id="@+id/dialog_add_topic_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_camera_picture"
            android:tint="@color/test_color"
            android:backgroundTint="@android:color/transparent"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_gravity="end"/>

        <ImageButton
            android:id="@+id/dialog_add_topic_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_folder"
            android:tint="@color/test_color"
            android:backgroundTint="@android:color/transparent"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:layout_gravity="end"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_add_topic_short_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:hint="@string/short_info"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:textSize="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>

<!-- maybe these ime parameters will cause errors since the ActionId is always the same -->